--- a/views/currentUser.handlebars
+++ b/views/currentUser.handlebars
@@ -72,6 +72,7 @@
         <tr>
             <th scope="col">ID Producto</th>
             <th scope="col" class="w-25">Nombre</th>
+            <th scope="col">Imagen</th>
             <th scope="col" class="w-25">Descripcion</th>
             <th scope="col">Cantidad</th>
             <th scope="col">Precio Un</th>
@@ -83,6 +84,7 @@
             <tr  id="{{this.product._id}}"> 
                 <td>{{this.product._id}}</td>
                 <td>{{this.product.title}}</td>
+                <td class="w-25"> <div class="container d-flex  align-items-center justify-content-center "><img class="w-100" src={{this.product.preview}} ></div></td>
                 <td>{{this.product.description}}</td>
                 <td>{{this.quantity}}</td>
                 <td>{{this.product.price}}</td>
@@ -105,7 +107,7 @@
                 Vaciar el carrito
             </button>
         </td>  
-        <td colspan="3">
+        <td colspan="4">
             <button onClick=comprarCarrito() type="button" class="btn btn-success w-25 m-1 mt-3">
                 PAGAR
             </button>
