--- a/views/productsView.handlebars
+++ b/views/productsView.handlebars
@@ -48,6 +48,7 @@
     <thead>
         <tr>
         <th scope="col">Titulo</th>
+        <th scope="col" class="text-center">Imagen</th>
         <th scope="col">Precio</th>
         <th scope="col">Descripcion</th>
         <th scope="col">Id</th>
@@ -60,13 +61,17 @@
         {{#each paginatedProducts.payload}}            
             <tr>    
                 <td>{{this.title}}</td>
+                <td > <div class="container d-flex  align-items-center justify-content-center "><img src={{this.preview}} class="w-25"></div></td>
                 <td>{{this.price}}</td>
                 <td>{{this.description}}</td>  
                 <td>{{this._id}}</td>
                 <td>{{this.stock}}</td>
                 <td>{{this.owner}}</td> 
                 <td>
-                    <div class="d-flex ">                      
+                    <div class="d-flex ">   
+                        <button onClick=productDetails("{{this._id}}") type="button" class="btn btn-outline-info w-100 m-1">
+                            Ver detalles
+                        </button>                                          
                         {{#if this.userIsOwner}}
                             <div class="d-flex flex-wrap">
                                 <button onClick=editProduct("{{this._id}}") type="button" class="btn btn-outline-warning w-100 m-1">
