modificacion de sistema de imagenes y archivos de productos

--- a/views/productsView.handlebars
+++ b/views/productsView.handlebars
@@ -61,7 +61,7 @@
         {{#each paginatedProducts.payload}}            
             <tr>    
                 <td>{{this.title}}</td>
-                <td > <div class="container d-flex  align-items-center justify-content-center "><img src={{this.preview}} class="w-25"></div></td>
+                <td > <div class="container d-flex  align-items-center justify-content-center "><img  class="w-25" src={{this.preview}}></div></td>
                 <td>{{this.price}}</td>
                 <td>{{this.description}}</td>  
                 <td>{{this._id}}</td>
